--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": "ioo",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/mendoanoppah/nodejs-npm/issues"
+    "url": "https://github.com/mendoanoppah/nodejs-npm.git"
   },
   "homepage": "https://github.com/mendoanoppah/nodejs-npm#readme"
 }
